Add favicon links and remove unused assets
- Added multiple favicon links in `index.html` for better browser compatibility.
- Removed unused `favicon.ico` and `placeholder.svg` files from the public directory.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Aeonik:wght@300;400;500;600;700&display=swap">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/android-chrome-512x512.png">
+    <!-- If you have a manifest, add it here -->
+    <!-- <link rel="manifest" href="/assets/site.webmanifest"> -->
   </head>
 
   <body>
