--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - Creative Developer & Designer</title>
-    <meta name="description" content="Creative developer and designer portfolio showcasing case studies and experience" />
-    <meta name="author" content="Your Name" />
+    <title>Sarthak Pranit</title>
+    <meta name="description" content="Sarthak Pranit - Design Strategist portfolio showcasing case studies and experience" />
+    <meta name="author" content="Sarthak Pranit" />
 
-    <meta property="og:title" content="Your Name - Creative Developer & Designer" />
-    <meta property="og:description" content="Creative developer and designer portfolio showcasing case studies and experience" />
+    <meta property="og:title" content="Sarthak Pranit" />
+    <meta property="og:description" content="Sarthak Pranit - Design Strategist portfolio showcasing case studies and experience" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
